fixed hero on mobile

--- a/style.css
+++ b/style.css
@@ -503,6 +503,9 @@ color:white;
 ======================= */
 @media(max-width:768px){
 
+  .hero{
+  padding-top:280px;
+}
   .hero-grid,
   .grid,
   .booking{
